--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.8.1",
+    "nanoid": "^4.0.1",
     "nodemon": "^2.0.20",
     "pg": "^8.9.0",
+    "shorturl": "^0.0.3",
     "uuid": "^9.0.0"
   }
 }
